--- a/chatkit/build.gradle
+++ b/chatkit/build.gradle
@@ -1,12 +1,11 @@
 apply plugin: 'com.android.library'
-apply plugin: 'com.novoda.bintray-release'
 
 android {
-    compileSdkVersion 27
-    buildToolsVersion "27.0.3"
+    compileSdkVersion 28
 
     defaultConfig {
         minSdkVersion 14
+        targetSdkVersion 28
         versionCode 1
         versionName "0.3.3"
         consumerProguardFiles 'proguard.txt'
@@ -18,19 +17,9 @@ android {
     }
 }
 
-publish {
-    groupId = 'com.github.stfalcon'
-    artifactId = 'chatkit'
-    publishVersion = '0.3.3'
-    desc = 'ChatKit - is a library designed to simplify the development of UI for such a trivial task as chat. It have flexible possibilities for styling, customizing and data management'
-    licences = ['Apache-2.0']
-    uploadName = 'ChatKit'
-    website = 'https://github.com/stfalcon-studio/ChatKit.git'
-}
-
 ext {
-    supportVersion = '27.1.1'
-    flexboxVersion = '1.0.0'
+    supportVersion = '28.0.0'
+    flexboxVersion = '0.2.5'
 }
 
 dependencies {
