--- a/chatkit/build.gradle
+++ b/chatkit/build.gradle
@@ -18,6 +18,10 @@ android {
             abortOnError false
         }
     }
+    compileOptions {
+        sourceCompatibility 1.8
+        targetCompatibility 1.8
+    }
 }
 
 publish {
