--- a/chatkit/build.gradle
+++ b/chatkit/build.gradle
@@ -18,10 +18,10 @@ android {
             abortOnError false
         }
     }
-    compileOptions {
-        sourceCompatibility 1.8
-        targetCompatibility 1.8
-    }
+//    compileOptions {
+//        sourceCompatibility 1.8
+//        targetCompatibility 1.8
+//    }
 }
 
 publish {
